# Real-Time-3D-Model-Renderer

./: CMakeLists.txt  LICENSE  README.md
header/: mesh.h  renderer.h  shader.h  window.h
shaders/: cube.frag  cube.vert
src/: glad.c  main.cpp  mesh.cpp  renderer.cpp  shader.cpp  window.cpp
